--- a/generators/ui-renderer/templates/OSGI-INF/message.properties
+++ b/generators/ui-renderer/templates/OSGI-INF/message.properties
@@ -1,14 +1,14 @@
-com.akana.activity.normalize.ui.process.helpId=999
+<%= props.namespace %>.ui.process.helpId=999
 
 NormalizeActivity.type.helpTitle=Normalize Message Editor
 NormalizeActivity.type.helpText=<p>The Gateway is optimized to not normalize messages until it has to.  In some circumstances you may need to force normalization of a specific message to support a process activity.  Select the name of the variable that contains the message you want to normalize (this will most commonly be the 'message' variable that contains the default input message).</p>
-com.akana.activity.normalize.message=Message
-com.akana.activity.normalize.value.label=Value
-com.akana.activity.normalize.add.label=Add
-com.akana.activity.normalize.variable.label=Variable
-com.akana.activity.normalize.delete.label=Delete
-com.akana.activity.normalize.name=Normalize Message
-com.akana.activity.normalize.description=Convert the message to a normalized XML representation. 
-com.akana.activity.normalize.menuHoverHelp=Drag and drop to add Normalize Message Activity
-com.akana.activity.normalize.icon=/com.akana.activity.normalize.ui/resources/images/normalize-24px.gif
-com.akana.activity.normalize.detail.label=Modify Normalize Message Details
+<%= props.namespace %>.message=Message
+<%= props.namespace %>.value.label=Value
+<%= props.namespace %>.add.label=Add
+<%= props.namespace %>.variable.label=Variable
+<%= props.namespace %>.delete.label=Delete
+<%= props.namespace %>.name=Normalize Message
+<%= props.namespace %>.description=Convert the message to a normalized XML representation. 
+<%= props.namespace %>.menuHoverHelp=Drag and drop to add Normalize Message Activity
+<%= props.namespace %>.icon=/<%= props.validatorPackage %>/resources/images/24px.png
+<%= props.namespace %>.detail.label=Modify Normalize Message Details
