--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "generator-akana-activity",
   "version": "1.0.0",
-  "description": "Yeoman generator",
+  "description": "Yeoman generator - Akana Process Activity",
   "license": "Apache-2.0",
   "main": "generators/app/index.js",
   "repository": "akanainc/generator-akana-activity",
@@ -14,7 +14,10 @@
     "test": "mocha"
   },
   "files": [
-    "generators"
+    "generators",
+    "generators/app",
+    "generators/build",
+    "generators/renderer"
   ],
   "keywords": [
     "yeoman-generator",
