Update Icons and Build Script

--- a/generators/ui-renderer/templates/OSGI-INF/message.properties
+++ b/generators/ui-renderer/templates/OSGI-INF/message.properties
@@ -11,4 +11,5 @@
 <%= props.namespace %>.description=<%= props.description %>
 <%= props.namespace %>.menuHoverHelp=Drag and drop to add <%= props.title %>
 <%= props.namespace %>.icon=/<%= props.rendererPackage %>/resources/images/24px.png
+<%= props.namespace %>.icon2=/<%= props.rendererPackage %>/resources/images/32px.png
 <%= props.namespace %>.detail.label=Modify <%= props.title %>
