--- a/generators/ui-renderer/templates/src/main/web/WEB-INF/web.xml
+++ b/generators/ui-renderer/templates/src/main/web/WEB-INF/web.xml
@@ -3,7 +3,7 @@
   PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.2//EN"
   "http://java.sun.com/j2ee/dtds/web-app_2_2.dtd">
 <web-app>
-	<display-name>Normalize Activity</display-name>
+	<display-name><%=props.title%></display-name>
 	<taglib>
 		<taglib-uri>/strutsbean</taglib-uri>
 		<taglib-location>/WEB-INF/tlds/struts-bean.tld</taglib-location>
